[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "few_shot_classifier"
version = "0.1.0"
description = "Few-shot relation classification and meta-learning experiments"
authors = [
    { name = "Eric Sullivan", email = "eb.navillus@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.2.2",
    "transformers==4.39.3",
    "peft==0.10.0",
    "scikit-learn==1.4.2",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "tqdm==4.66.2",
    "bitsandbytes==0.43.0",
    "streamlit==1.32.0",
    "packaging==23.2",
]
[tool.setuptools.packages.find]
where = ["src"]